<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">LOGIN</string>
    <string name="sign_up_wc">SIGN UP</string>
    <string name="hola">HOLA!</string>
    <string name="hola1">HOLA!</string>
    <string name="hola2">HOLA!</string>
    <string name="no_vuelvas_a_jugar_solo_unete_o_inicia_session_para_encontrar_tu_premade_i_llevar_tu_juego_al_siguiente_nivel">No vuelvas a jugar solo, unete o inicia session para encontrar tu premade i llevar tu juego al siguiente nivel!</string>
    <string name="todo">TODO</string>
    <string name="hola_de_nuevo">¡HOLA DE NUEVO!</string>
    <string name="hola_de_nuevo2">¡HOLA DE NUEVO!</string>
    <string name="hola_de_nuevo3">¡HOLA DE NUEVO!</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="olvidaste_tu_constrase_a">¿Olvidaste tu constraseña?</string>
    <string name="line1">_____________________________________________________</string>
    <string name="o_inicia_sesion_con">o inicia sesion con</string>
    <string name="sign_up_lgin">SIGN UP</string>
    <string name="a_n_no_tiernes_una_cuenta">¿Aún no tiernes una cuenta?</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="sign_up__LGIN">SIGN UP</string>
    <string name="sign_up_WCPG">SIGN UP</string>
    <string name="teammatch">TeamMatch</string>
    <string name="bienvenido_a__">¡BIENVENIDO/A!</string>
    <string name="bienvenido_a___">¡BIENVENIDO/A!</string>
    <string name="bienvenido_a_">¡BIENVENIDO/A!</string>
    <string name="e_mail">E-mail</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ya_tiernes_una_cuenta">¿ya tiernes una cuenta?</string>
    <string name="login_">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="descripci_n">Descripción...</string>
    <string name="solo_unos_pasos_m_s">Solo unos pasos más...</string>
    <string name="listo">LISTO</string>
    <string name="connecta_tu_cuenta_de_riot">connecta tu cuenta de RIOT</string>
    <string name="agente_m_s_jugado_main">Agente más jugado (main)</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="a_ade_tu_foto_de_perfil">Añade tu foto de perfil</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="dsf">dsf</string>
    <string name="fs">fs</string>
    <string name="dsfs">dsfs</string>
    <string name="dfxf">dfxf</string>
    <string name="tournament">Tournament</string>
    <string name="solo" />
    <string name="team" />
    <string name="chat" />
    <string name="trmnt" />

    <string-array name="mainSelection">
        <item>Selecciona tu main…</item>
        <item>Astra</item>
        <item>Breach</item>
        <item>Brimstone</item>
        <item>Chamber</item>
        <item>Cypher</item>
        <item>Fade</item>
        <item>Killjoy</item>
        <item>Neon</item>
        <item>Omen</item>
        <item>Phoenix</item>
        <item>Raze</item>
        <item>Reyna</item>
        <item>Sage</item>
        <item>Skye</item>
        <item>Sova</item>
        <item>Viper</item>
        <item>Yoru</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>