<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_background">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo_unos_pasos_m_s"
        android:textColor="#EFEFEF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintVertical_bias="0.082" />

    <ImageButton
        android:id="@+id/back_minrl_btnH"
        android:layout_width="57dp"
        android:layout_height="62dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riot_login_buttonH"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="#FFFFFF"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:theme="@style/Theme.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:visibility="visible"
            app:menu="@menu/welcome"
            app:title="TeamMatch"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_light_onSecondary" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/finish_btnH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4BE9FD"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/listo"
        android:textColor="@color/md_theme_dark_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riot_login_buttonH" />

    <EditText
        android:id="@+id/description_txtH"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:foregroundTint="#E3E3E3"
        android:gravity="start|top"
        android:hint="@string/descripci_n"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#C5C5C5"
        android:textColorHint="#757575"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecta_tu_cuenta_de_riot"
        android:textColor="#E4E4E4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_txtH"
        app:layout_constraintVertical_bias="0.236" />

    <ImageButton
        android:id="@+id/riot_login_buttonH"
        android:layout_width="171dp"
        android:layout_height="92dp"
        android:backgroundTint="@color/md_theme_dark_background"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/riotlogo"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>