<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:theme="@style/Theme.AppCompat.Light"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:menu="@menu/welcome"
            app:title="TeamMatch"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_light_onSecondary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061">

            <TextView
                android:id="@+id/bienvenido_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="¡BIENVENIDO/A!"
                android:textColor="#FF2D1E"
                android:textSize="48sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toBottomOf="@+id/bienvenido_w"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/bienvenido_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="¡BIENVENIDO/A!"
                android:textColor="@color/md_theme_dark_primary"
                android:textSize="48sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bienvenido_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="¡BIENVENIDO/A!"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnknownIdInLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line1"
            android:textColor="#D3D3D3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.662" />

        <EditText
            android:id="@+id/email_txt"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:backgroundTint="#BCBCBC"
            android:backgroundTintMode="add"
            android:breakStrategy="simple"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:singleLine="false"
            android:textColor="#888888"
            android:textColorHint="#757575"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.082" />

        <EditText
            android:id="@+id/username_txt"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:backgroundTint="#BCBCBC"
            android:backgroundTintMode="add"
            android:breakStrategy="simple"
            android:ems="10"
            android:hint="@string/nombre_de_usuario"
            android:inputType="textEmailAddress"
            android:singleLine="false"
            android:textColor="#888888"
            android:textColorHint="#757575"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_txt"
            app:layout_constraintVertical_bias="0.028" />

        <EditText
            android:id="@+id/psw_txt"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:backgroundTint="#BCBCBC"
            android:backgroundTintMode="add"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="#888888"
            android:textColorHint="#757575"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_txt"
            app:layout_constraintVertical_bias="0.029" />

        <TextView
            android:layout_width="151dp"
            android:layout_height="23dp"
            android:background="@color/md_theme_dark_background"
            android:text="@string/o_inicia_sesion_con"
            android:textAlignment="center"
            android:textColor="#D3D3D3"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.665" />

        <ImageButton
            android:id="@+id/fb_signup_btn"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:adjustViewBounds="false"
            android:background="#00FFFFFF"
            android:contentDescription="@string/facebook"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.633"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.217"
            app:srcCompat="@drawable/facebook_icon"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/google_signup_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="180dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/google"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/google"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ya_tiernes_una_cuenta"
            android:textColor="@color/md_theme_light_primaryContainer"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.891" />

        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_dark_error"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textColor="#002B2C"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#4FDDEF"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="#002B2C"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/psw_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>